[tool.poetry]
name = "finetuningservice"
version = "0.1.0"
description = ""
authors = ["chadbrouze <chadbrouze1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^2.20.0"
transformers = "^4.44.0"
trl = "^0.9.6"
unsloth = "^2024.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
