[tool.poetry]
name = "finetuningservice"
version = "0.1.0"
description = "A service fine instruction fine tuning open source models."
authors = ["Chad Brouze"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
datasets = "^2.21.0"
python-dotenv = "^1.0.1"
trl = "^0.10.1"
wandb = "^0.17.8"
peft = "^0.12.0"
bitsandbytes = "^0.43.3"
huggingface-hub = "^0.24.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
